--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -51,7 +51,7 @@ Example context (json):
          class="d-none border-left d-lg-flex align-items-center justify-content-center h-100 position-absolute z-index-1">
         <i class="position-absolute bi bi-grip-vertical"></i>
     </div>
-    <div class="p-3 mt-3 mt-lg-0 position-relative" id="content-region">
+    <div class="p-3 position-relative" id="content-region">
         <div class="w-100 h-100 overflow-auto border rounded-lg" id="contentblock">
             {{! action bar }}
             <div id="video-action"
@@ -119,14 +119,14 @@ Example context (json):
                                        data-field="xp"
                                        class="form-control form-control-sm d-none">
                                 <button title="{{#str}}clone, mod_interactivevideo{{/str}}"
-                                        class="border-0 p-1 btn btn-sm copy">
+                                        class="border-0 px-2 btn btn-sm copy">
                                     <i class="bi bi-copy"></i>
                                 </button>
                                 <button title="{{#str}}edit, mod_interactivevideo{{/str}}"
-                                        class="border-0 p-1 btn btn-sm edit">
+                                        class="border-0 px-2 btn btn-sm edit">
                                     <i class="bi bi-pencil-square"></i>
                                 </button>
-                                <button class="border-0 p-1 btn btn-sm text-danger delete"
+                                <button class="border-0 px-2 btn btn-sm text-danger delete"
                                         title="{{#str}}delete, mod_interactivevideo{{/str}}">
                                     <i class="bi bi-trash3-fill"></i>
                                 </button>
