--- a/templates/pagenav.mustache
+++ b/templates/pagenav.mustache
@@ -33,7 +33,7 @@ Example context (json):
     {{#completion}}
     <div class="dropdown"
          title="{{#str}}todo,mod_interactivevideo{{/str}}"
-         data-toggle="tooltip">
+         data-toggle="tooltip" data-placement="right">
         <button class="btn btn-sm border-0"
                 type="button"
                 id="completiondropdown"
