--- a/templates/player.mustache
+++ b/templates/player.mustache
@@ -19,7 +19,8 @@ Example context (json):
 }
 }}
 <div id="interactivevideo-container"
-     class="container-fluid {{#darkmode}}p-sm-3{{/darkmode}} {{^darkmode}}p-sm-3{{/darkmode}} alternative {{#displayoptions.distractionfreemode}}position-absolute{{/displayoptions.distractionfreemode}}" data-complete="{{completed}}">
+     class="container-fluid {{#darkmode}}p-sm-3{{/darkmode}} {{^darkmode}}p-sm-3{{/darkmode}} alternative {{#displayoptions.distractionfreemode}}position-absolute{{/displayoptions.distractionfreemode}}"
+     data-complete="{{completed}}">
     <div class="row justify-content-center mx-0">
         <div class="col-12 px-0">
             <div id="wrapper" class="position-relative mx-auto">
@@ -122,7 +123,7 @@ Example context (json):
 </div>
 {{/displayasstartscreen}}
 <div id="end-screen"
-     class="w-100 position-absolute h-100 bg-light d-none bottom-0">
+     class="w-100 position-absolute h-100 {{#hasendscreentext}}bg-light{{/hasendscreentext}}{{^hasendscreentext}}{{^darkmode}}bg-light{{/darkmode}}{{#darkmode}}bg-black{{/darkmode}}{{/hasendscreentext}} d-none bottom-0">
     <div class="end-content {{#hasendscreentext}}hascontent w-100 p-0 align-items-start{{/hasendscreentext}}">
         {{#hasendscreentext}}
         <div id="title-section"
@@ -155,7 +156,7 @@ Example context (json):
 </div>
 </div>
 {{^displayoptions.hidemainvideocontrols}}
-<div class="mt-0 mt-md-2 bg-dark d-flex flex-column p-0 justify-content-center"
+<div class="mt-0 mt-md-2 bg-dark d-flex flex-column p-0 justify-content-center opacity-1"
      id="controller">
     <div id="taskinfo"
          class="border-0 flex-column align-items-center justify-content-end w-100 px-3 bg-transparent">
@@ -195,8 +196,9 @@ Example context (json):
                       id="chapterbutton"><i class="bi bi-collection"></i></span>
             </div>
         {{/displayoptions.disablechapternavigation}}
-        <span class="text-white ml-2" id="currenttime">00:00</span><span class="text-white mx-1">/</span>
-        <span class="text-white" id="duration">--:--</span>
+        <span class="text-white ml-2 d-none d-md-inline" id="currenttime">00:00</span><span class="d-none d-md-inline text-white mx-1">/</span>
+        <span class="text-white d-none d-md-inline" id="duration">--:--</span>
+        <span class="text-white d-md-none d-inline ml-2" id="remainingtime">--:--</span>
         <span class="text-secondary ml-2 d-none d-md-inline" id="chaptertitle"></span>
     </div>
     <div class="d-flex align-items-center">
@@ -216,7 +218,8 @@ Example context (json):
                    data-trigger="focus"
                    title="{{#str}}subtitle,mod_interactivevideo{{/str}}"></i>
             </span>
-            <div id="caption-dropdown" class="dropdown-menu dropdown-menu-right bg-black text-white"></div>
+            <div id="caption-dropdown"
+                 class="dropdown-menu dropdown-menu-right bg-black text-white"></div>
         </div>
         <div class="btn-group dropup d-none" id="changerate">
             <span role="button"
@@ -231,6 +234,7 @@ Example context (json):
             </span>
             <div class="dropdown-menu dropdown-menu-right bg-black text-white">
                 <a class="dropdown-item text-white changerate" data-rate="0.5" href="#"><i class="bi fa-fw ml-n3"></i>0.5</a>
+                <a class="dropdown-item text-white changerate" data-rate="0.75" href="#"><i class="bi fa-fw ml-n3"></i>0.75</a>
                 <a class="dropdown-item text-white changerate" data-rate="1" href="#"><i class="bi fa-fw bi-check ml-n3"></i>1</a>
                 <a class="dropdown-item text-white changerate" data-rate="1.5" href="#"><i class="bi fa-fw ml-n3"></i>1.5</a>
                 <a class="dropdown-item text-white changerate" data-rate="2" href="#"><i class="bi fa-fw ml-n3"></i>2</a>
