--- a/templates/player.mustache
+++ b/templates/player.mustache
@@ -75,7 +75,7 @@ Example context (json):
             <div class="intro-content {{#hasintro}}hasintro{{/hasintro}} bg-light w-100 p-0 align-items-start">
                 <div id="title-section"
                      class="bg-secondary w-100 d-flex align-items-center justify-content-between p-3 overflow-hidden position-sticky">
-                    <div class="d-flex flex-column justify-content-center">
+                    <div class="d-flex flex-column justify-content-center" style="max-width: calc(100% - 3rem);">
                         <div class="metadata d-block d-md-none"></div>
                         <h2 class="line-height-100 mb-0 title">{{{title}}}</h2>
                     </div>
