--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -25,6 +25,9 @@ Example context (json):
             <div class="p-3" id="player-region">
                 {{! Player }}
                 <div id="video-wrapper">
+                {{! start of toolbar}}
+                <div id="toolbar" class="bg-transparent pt-5 position-fixed"></div>
+                {{! end of toolbar }}
                 <div class="position-absolute w-100 h-100 no-pointer bg-transparent" id="background-loading" style="display:none;">
                     <div class="d-flex h-100 align-items-center justify-content-center">
                         <div class="spinner-border text-danger" style="width: 3rem; height: 3rem;" role="status">
